fix zoom probelem causing pixel gaps in cells. Omit borders bc the seem to break aspect ratio

--- a/src/assets/styles/style-base.scss
+++ b/src/assets/styles/style-base.scss
@@ -93,8 +93,8 @@
 
   .clues {
     .clue-list {
-      ol {
-        .active {
+      .active {
+        .clue-txt {
           color: #9e738f;
         }
       }
